[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylisto"
version = "0.0.27"
authors = [
  { name="Andrei-Florian Stoica", email="andreistoica@foxmail.com" },
]
description = "Performing comprehensive overlap assessments"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "sympy"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]