[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylisto"
version = "0.8.1"
authors = [
  { name="Andrei-Florian Stoica", email="andreistoica@foxmail.com" },
]
description = "Performing comprehensive overlap assessments"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "statsmodels",
  "sympy"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]